--- a/src/giaodien/Home.form
+++ b/src/giaodien/Home.form
@@ -608,6 +608,7 @@
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                               <Image iconType="3" name="/anh/reload.png"/>
                             </Property>
+                            <Property name="requestFocusEnabled" type="boolean" value="false"/>
                           </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
