--- a/src/giaodien/ThanhToan.form
+++ b/src/giaodien/ThanhToan.form
@@ -381,7 +381,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="ckbLoaiKhach" alignment="0" min="-2" pref="263" max="-2" attributes="0"/>
-                                          <Component id="cbxKhongLayHD" alignment="0" min="-2" pref="263" max="-2" attributes="0"/>
+                                          <Component id="rdoNoReceipt" alignment="0" min="-2" pref="263" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
@@ -418,7 +418,7 @@
                           <Component id="lbTienTraLai" linkSize="4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="cbxKhongLayHD" min="-2" max="-2" attributes="0"/>
+                      <Component id="rdoNoReceipt" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="ckbLoaiKhach" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="63" max="32767" attributes="0"/>
@@ -556,7 +556,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JCheckBox" name="cbxKhongLayHD">
+            <Component class="javax.swing.JCheckBox" name="rdoNoReceipt">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="17" style="0"/>
