--- a/src/giaodien/ThanhToan.form
+++ b/src/giaodien/ThanhToan.form
@@ -467,7 +467,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="17" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value=" Ti&#x1ec1;n              "/>
+                <Property name="text" type="java.lang.String" value="Kh&#xe1;ch Tr&#x1ea3;"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder bottom="1" left="0" right="1" top="0">
@@ -546,7 +546,7 @@
                   <Font name="Tahoma" size="17" style="0"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="4"/>
-                <Property name="text" type="java.lang.String" value="0"/>
+                <Property name="text" type="java.lang.String" value="-0"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder bottom="1" left="0" right="0" top="0">
